SD/styles-sd.css
/* ... */
nav > ol > a:not(.selected):hover::before {
  box-shadow: 20px 20px 0 20px #fad385;
}
nav > ol > a:not(.selected):hover::after {
  box-shadow: 20px -20px 0 20px #fad385;
}
/*------------------------------------------------------------------*/
/*------------------SECOND NAV BAR FOR SMALL SCREENS----------------*/
/*------------------------------------------------------------------*/
@media (min-width: 758px) or (min-height: 600px) {
  label {
    display: none;
  }
}
@media (max-width: 758px) or (max-height: 600px) {
  .nav-desktop {
    display: none;
  }
  body {
    display: block;
  }
  main {
    width: 100%;
    height: 100%;
    overflow-y: visible;
  }
  .pcards,
  .ncards {
    justify-content: center;
    overflow-y: auto;
  }
  label {
    display: block;
    align-content: center;
  }
  label .menu {
    position: absolute;
    top: -100px;
    display: table;
    z-index: 200;
    width: 145px;
    height: 170px;
    background: rgba(255, 255, 255, 0.95);
    border-radius: 50% 50% 50% 50%;
    -webkit-transition: 0.5s ease-in-out;
    transition: 0.5s ease-in-out;
    box-shadow: 0 0 0 0 #fff, 0 0 0 0 #fff;
    cursor: pointer;
    border-style: inset;
    border-color: #ffc95f;
  }
  label .hamburger {
    position: absolute;
    top: 135px;
    left: 50px;
    width: 30px;
    height: 2px;
    background: #ffc95f;
    display: block;
    -webkit-transform-origin: center;
    transform-origin: center;
    -webkit-transition: 0.5s ease-in-out;
    transition: 0.5s ease-in-out;
  }
  label .hamburger:after,
  label .hamburger:before {
    -webkit-transition: 0.25s ease-in-out;
    transition: 0.25s ease-in-out;
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    background: #ffc95f;
  }
  label .hamburger:before {
    top: -10px;
  }
  label .hamburger:after {
    bottom: -10px;
  }
  label input:checked + .menu {
    box-shadow: 0 0 0 100vh #fff, 0 0 0 100vh #fff;
    background: rgba(255, 255, 255, 1);
    border-radius: 0;
    width: 100vw;
    height: 100vh;
    border-style: none;
  }
  label input:checked + .menu .hamburger {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
  }
  label input:checked + .menu .hamburger:after {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
    bottom: 0;
  }
  label input:checked + .menu .hamburger:before {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
    top: 0;
  }
  label input:checked + .menu + ul {
    opacity: 1;
    z-index: 200;
  }
  label ul {
    position: absolute;
    top: 27.5%;
    left: 50%;
    width: 80%;
    height: +50%;
    list-style-type: none;
    text-align: center;
    padding-inline-start: 0;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    opacity: 0;
    -webkit-transition: 0.25s 0s ease-in-out;
    transition: 0.25s 0s ease-in-out;
  }
  label input:not(:checked) + .menu + ul {
    z-index: -1;
    transition: z-index 0s 0.5s;
  }
  #searchButton input {
    padding-left: 10px;
    top: 0;
    border: outset;
    border-radius: 10px;
    border-color: #ffc95f;
    width: 35%;
    font-size: 18px;
  }
  label > ul > li > icon-icon {
    text-align: center;
  }
  label a {
    margin-bottom: 1em;
    display: block;
    color: #ffc95f;
    font-size: 25px;
    text-decoration: none;
  }
  label a.selected {
    color: #a16e07;
  }
}
@media (max-width: 365px) {
  #searchButton input {
    font-size: 12px;
  }
}
@media (max-height: 565px) {
  label ul {
    top: 20%;
  }
}

/*-------------------------------------------------------------------------*/
/*-----------------------POSITIVE PROMPTS CARDS----------------------------*/
/*-------------------------------------------------------------------------*/
a.btn {
  background: #ffc95f;
  border-radius: 4px;
  box-shadow: 0 2px 0px 0 rgba(0, 0, 0, 0.25);
  color: #ffffff;
  display: inline-block;
  padding: 6px 30px 8px;
  position: relative;
  text-decoration: none;
  transition: all 0.1s 0s ease-out;
  cursor: pointer;
}
.no-touch a.btn:hover {
  background: #ffc95f;
  box-shadow: 0px 8px 2px 0 rgba(0, 0, 0, 0.075);
  transform: translateY(-2px);
  transition: all 0.25s 0s ease-out;
}
.no-touch a.btn:active,
a.btn:active {
  background: #ffc95f;
  box-shadow: 0 1px 0px 0 rgba(255, 255, 255, 0.25);
  transform: translate3d(0, 1px, 0);
  transition: all 0.025s 0s ease-out;
}
div.pcards {
  max-width: 960px;
  overflow-y: visible;
  margin: 30px auto 95px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
div.card {
  background: #ffffff;
  display: inline-block;
  margin: 8px;
  max-width: 300px;
  perspective: 1000;
  position: relative;
  text-align: left;
  transition: all 0.3s 0s ease-in;
  width: 300px;
  z-index: 1;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.025), 0 2px 2px rgba(0, 0, 0, 0.025),
    0 4px 4px rgba(0, 0, 0, 0.025), 0 8px 8px rgba(0, 0, 0, 0.025),
    0 16px 16px rgba(0, 0, 0, 0.025);
}
div.card img {
  position: relative;
  max-width: 300px;
}
div.card .card__image-holder {
  background: rgba(0, 0, 0, 0.1);
  height: 300px;
}
div.card div.card-title {
  background: #ffffff;
  padding: 6px 15px 10px;
  position: relative;
  z-index: 0;
}
div.card div.card-title a.toggle-info {
  border-radius: 32px;
  height: 32px;
  padding: 0;
  position: absolute;
  right: 15px;
  top: 10px;
  width: 32px;
}
div.card div.card-title a.toggle-info span {
  background: #ffffff;
  display: block;
  height: 2px;
  position: absolute;
  top: 16px;
  transition: all 0.15s 0s ease-out;
  width: 12px;
}
div.card div.card-title a.toggle-info span.left {
  right: 14px;
  transform: rotate(45deg);
}
div.card div.card-title a.toggle-info span.right {
  left: 14px;
  transform: rotate(-45deg);
}
div.card div.card-title h2 {
  font-size: 24px;
  font-weight: 700;
  letter-spacing: -0.05em;
  margin: 0;
  padding: 0;
}
/* ... */

